@@ -76,6 +76,7 @@ Views 6.x-3.x-dev
     o #669448: items per page override from summary style stopped working with pluggable pagers.
     o #652742: Replacement pattern tokens for multiple fields did not work.
     o #659510 by Souvent22 and dereine: glossary AJAX broken.
+    o #666720 by dagmar: Fix GROUP BY when only filters are present.
 
 Views 6.x-3.0-alpha1
   Bugs fixed
